# Chorus

./: .gitignore  CMakeLists.txt  README.md  todo.txt
include/: chorus.h  chorus_params.h  config.h  matplotlibcpp.h  multi_dof_otg.h  otg.h  otg_params.h  single_dof_otg.h
src/: multi_dof_otg.cpp  otg.cpp
